commit changes in variables and main.scss

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -6,3 +6,38 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 100%;
+}
+
+img {
+    max-width: 100%;
+}
+
+body {
+    height: 100vh;
+    width: 100%;
+    padding: 4rem 5rem 2.5rem 5rem;
+    margin: 0 auto;
+    font-family: 'Manrope', sans-serif;
+    font-size: 15px;
+    font-weight: 300;
+    background-image: url('../images/bg-pattern.svg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: $very-pale-blue;
+}
+
+
+.card__main-title {
+    text-align: center;
+    font-size: 2rem;
+    color: $dark-desaturated-blue;
+}
+
+.card__main-subtitle {
+    text-align: center;
+    color: $grayish-blue;
+}
+
