--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -23,7 +23,6 @@ body {
     font-size: 15px;
     font-weight: 300;
     background-image: url('../images/bg-pattern.svg');
-    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-color: $very-pale-blue;
@@ -39,5 +38,6 @@ body {
 .card__main-subtitle {
     text-align: center;
     color: $grayish-blue;
+    margin-bottom: 70px;
 }
 
