--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -11,5 +11,14 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        .card__price-range--rate {
+            color: #000;
+
+            .per {
+                font-size: 15px;
+                color: $grayish-blue;
+            }
+        }
     }
 }
