--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -47,7 +47,19 @@
         display: flex;
         align-items: center;
         justify-content: space-around;
-        
+
+
+        p {
+            font-size: 11px;
+        }
+
+        .discount {
+            margin-left: 5px;
+            padding: 4px;
+            background-color: $light-grayish-red;
+            color: $light-red;
+            border-radius: 6px;
+        }
     }
 
 }
