--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -68,6 +68,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding: 0 1rem;
 
         ul li {
             list-style-image: url('/images/icon-check.svg');
@@ -75,6 +76,17 @@
 
         li + li {
             margin-top: 10px;
+        }
+
+        button {
+            padding: 15px 40px;
+            display: inline-block;
+            background: $dark-desaturated-blue;
+            outline: none;
+            color: $white;
+            font-weight: 600;
+            border: 0;
+            border-radius: 20px;
         }
     }
 
