--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -22,27 +22,6 @@
         }
     }
 
-    .card__slider {
-        margin-top: 3rem;
-        margin-bottom: 2.5rem;
-
-        .slider {
-            width: 95%;
-            margin: 0 auto;
-            -webkit-appearance: none;
-            border-radius: 5px;
-            height: 8px;
-            background: $lightgrayish;
-            outline: none;
-        }
-
-        .slider::-webkit-slider-runnabble-track {
-            height: 10px;
-            -webkit-appearance: none;
-            color: #13bba4;
-        }
-    }
-
     .card__billing {
         display: flex;
         align-items: center;
@@ -63,7 +42,10 @@
         }
     }
 
-    
+    hr {
+        border: 1px solid $lightgrayish;
+        padding: 0!important;
+    }
 
     .card__footer {
         margin-top: 3rem;
