--- a/scss/_switch.scss
+++ b/scss/_switch.scss
@@ -1,3 +1,26 @@
+.card__billing {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        // margin-bottom: 3rem;
+        margin: 0 4rem 3rem;
+
+
+        p {
+            font-size: 14px;
+            text-transform: capitalize;
+        }
+
+        .discount {
+            margin-left: 5px;
+            padding: 4px;
+            background-color: $light-grayish-red;
+            color: $light-red;
+            border-radius: 6px;
+            text-transform: lowercase!important;
+        }
+    }
+
 .switch {
     position: relative;
     display: inline-block;
