--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -11,6 +11,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        height: 40px;
 
         .card__price-range--rate {
             color: #000;
@@ -24,6 +25,9 @@
 
     .card__price-range--rate {
         font-size: 35px;
+        height: inherit;
+        align-items: center;
+        display: inherit;
     }
 
     hr {
