--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -1,6 +1,7 @@
 .card__slider {
         margin-top: 3rem;
         margin-bottom: 2.5rem;
+        position: relative;
 
         .slider {
             width: 95%;
@@ -10,6 +11,7 @@
             height: 8px;
             background: $lightgrayish;
             outline: none;
+            
         }
 
         .slider::-webkit-slider-runnabble-track {
@@ -17,4 +19,10 @@
             -webkit-appearance: none;
             color: #13bba4;
         }
+    }
+
+    .two {
+        position: absolute;
+        left: 0;
+        transform: translateY(100%);
     }
