--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -9,9 +9,8 @@
         width: 100%;
         height: 6px;
         border-radius: 4px;
-        background: linear-gradient(135deg, $soft-cyan 0%, $soft-cyan 50%, $very-pale-blue 50%, $very-pale-blue 50%);
+        background: linear-gradient(to right, $soft-cyan 0%, $soft-cyan 50%, $very-pale-blue 50%, $very-pale-blue 50%);
         outline: none;
-        width: 100%;
     }
 
     &__range::-webkit-slider-thumb {
