--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -25,7 +25,16 @@ body {
     background-image: url('../images/bg-pattern.svg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-color: $lightgrayish;
+}
+
+.top {
     background-color: $very-pale-blue;
+    background: url('/images/bg-pattern.svg');
+    height: 449px;
+    position: relative;
+    padding: 5.25rem 0;
+    text-align: center;
 }
 
 
