commit -m card-title

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -26,15 +26,25 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-color: $lightgrayish;
+    padding: 0;
 }
 
 .top {
     background-color: $very-pale-blue;
     background: url('/images/bg-pattern.svg');
+    background-repeat: no-repeat;
+    background-position: center;
     height: 449px;
     position: relative;
     padding: 5.25rem 0;
     text-align: center;
+}
+
+.card-title {
+    position: absolute;
+    top: 30%;
+    left: 0;
+    right: 0;
 }
 
 
