--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,6 @@
 @import './variables';
+@import './_mixins.scss';
 @import './base';
 @import './card';
 @import './switch';
 @import './slider';
-@import './mixins';
