--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -7,14 +7,13 @@
     padding: 2rem;
     color: $grayish-blue;
     position: absolute;
-    top: 30%;
+    top: 15rem;
     left: 0;
     right: 0;
 
-    @include breakpoint-down (mobile){
-        margin: 0 10px;
+    @include breakpoint-down(mobile) {
         padding: 0.75rem;
-        top: 40%
+        margin: 20px;
     }
 
     .card__price-range {
@@ -25,6 +24,11 @@
 
         .card__price-range--rate {
             color: #000;
+
+            @include breakpoint-down(mobile){
+            display: none;
+        }
+
 
             .per {
                 font-size: 15px;
@@ -38,6 +42,10 @@
         height: inherit;
         align-items: center;
         display: inherit;
+    }
+
+    .card-mobile__price-range--rate{
+        display: none;
     }
 
     hr {
