--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -22,6 +22,13 @@
         justify-content: space-between;
         height: 40px;
 
+        @include breakpoint-down(mobile) {
+            text-align: center;
+            display: block;
+            height: none;
+            
+        }
+
         .card__price-range--rate {
             color: #000;
 
@@ -46,6 +53,19 @@
 
     .card-mobile__price-range--rate{
         display: none;
+
+        @include breakpoint-down(mobile){
+            display: block;
+            color: #000;
+            text-align: center;
+            height: 40px;
+
+            .per {
+                font-size: 15px;
+                color: $grayish-blue;
+            }
+        }
+
     }
 
     hr {
