--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -22,11 +22,10 @@
         justify-content: space-between;
         height: 40px;
 
-        @include breakpoint-down(mobile) {
-            text-align: center;
-            display: block;
-            height: none;
-            
+        .card__price-range--pageviews {
+            @include breakpoint-down (mobile){
+                margin: 0 auto;
+            }
         }
 
         .card__price-range--rate {
