--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -37,6 +37,10 @@ body {
     position: relative;
     padding: 5.25rem 0;
     text-align: center;
+
+    @include breakpoint-down (mobile) {
+        height: 300px;
+    }
 }
 
 .card-title {
@@ -65,6 +69,7 @@ body {
     
     @include breakpoint-down(mobile){
         font-size: 0.75rem!important;
+        margin-bottom: 0;
     }
 }
 
