--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -25,7 +25,6 @@ body {
     background-color: $lightgrayish;
     padding: 0;
 
-    
 }
 
 .top {
@@ -48,6 +47,10 @@ body {
     top: 30%;
     left: 0;
     right: 0;
+
+    @include breakpoint-down (mobile) {
+        top: 8rem;
+    }
 }
 
 
