--- a/scss/_switch.scss
+++ b/scss/_switch.scss
@@ -13,6 +13,10 @@
         p {
             font-size: 14px;
             text-transform: capitalize;
+
+            @include breakpoint-down(mobile){
+                font-size: 12.5px;
+            }
         }
 
         .discount {
