--- a/scss/_switch.scss
+++ b/scss/_switch.scss
@@ -5,7 +5,7 @@
         // margin-bottom: 3rem;
         margin: 0 4rem 3rem;
 
-        @include breakpoint-down(mobile) {
+        @include breakpoint-down(tablet) {
             margin: 2rem 0;
         }
 
@@ -14,7 +14,7 @@
             font-size: 14px;
             text-transform: capitalize;
 
-            @include breakpoint-down(mobile){
+            @include breakpoint-down(tablet){
                 font-size: 12.5px;
             }
         }
@@ -28,7 +28,7 @@
             text-transform: lowercase!important;
 
             .mobile{
-                @include breakpoint-down(mobile) {
+                @include breakpoint-down(tablet) {
                     display: none;
                 }
             }
